<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/nav_home" />
        <item android:id="@+id/nav_maps" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/nav_map" />
        <item android:id="@+id/nav_chat" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/nav_chat" />
    </group>

    <item android:title="@string/tools">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_settings" android:icon="@android:drawable/ic_menu_manage"
                    android:title="@string/nav_settings" />
                <item android:id="@+id/nav_information" android:icon="@android:drawable/ic_menu_share"
                    android:title="@string/nav_information" />
                <item android:id="@+id/nav_exit" android:icon="@android:drawable/ic_menu_share"
                    android:title="@string/nav_exit" />
            </group>
        </menu>
    </item>

</menu>